--- a/src/styles/NavHeader.css
+++ b/src/styles/NavHeader.css
@@ -1,7 +1,7 @@
 .nav-header {
-  position: sticky;
-  top: 0;
+  position: relative;
   z-index: 100;
+  flex-shrink: 0;
   display: flex;
   align-items: center;
   height: 56px;
